--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #757373; /* Fundo cinza-claro */
+            background-color: #201d1d; /* Fundo cinza-claro */
         }
 
         header {
-            background-color: #333;
+            background-color: #1a1919;
             color: #fff;
             padding: 20px;
             text-align: center;
@@ -22,7 +22,7 @@
         nav {
             background-color: black;
             height: 30px;
-            color: white;
+            color: rgb(100, 91, 91);
             text-align: center;
             padding: 20px;
             border-bottom-left-radius: 5px;
@@ -30,7 +30,7 @@
         }
 
         nav a {
-            color: white;
+            color: rgb(253, 253, 253);
             text-decoration: none;
             padding: 10px 20px;
         }
@@ -40,7 +40,7 @@
         }
 
         .conteudo {
-            background-color: rgb(185, 184, 184); /* Fundo branco */
+            background-color: rgb(240, 235, 235); /* Fundo branco */
             border-radius: 10px; /* Cantos arredondados */
             padding: 20px;
             margin: 10px auto; /* Centraliza e dá um espaçamento */
@@ -86,6 +86,7 @@
         .logo {
             margin: 10px;
             max-width: 60px;
+
         }
 
         .produtos {
@@ -142,7 +143,7 @@
                 font-family: Arial, sans-serif;
                 margin: 0;
                 padding: 0;
-                background-color: #f8f9fa; /* Fundo cinza-claro */
+                background-color: #ffffff; /* Fundo cinza-claro */
             }
     
             header {
@@ -153,7 +154,7 @@
             }
     
             nav {
-                background-color: #343a40; /* Cinza escuro */
+                background-color: #3f4750; /* Cinza escuro */
                 color: #fff;
                 text-align: center;
                 padding: 10px 0;
@@ -184,7 +185,7 @@
         .titulo-secao {
             font-size: 36px; /* Título maior */
             margin-bottom: 20px; /* Maior espaçamento abaixo do título */
-            color: #343a40; /* Texto escuro */
+            color: #2a2e31; /* Texto escuro */
             text-align: center; /* Centraliza o título */
         }
 
@@ -206,7 +207,7 @@
 
         .produto:hover {
             transform: translateY(-5px); /* Efeito de elevação ao passar o mouse */
-            box-shadow: 0 0 20px rgba(0, 0, 0, 0.2); /* Sombra mais pronunciada */
+            box-shadow: 0 0 20px rgba(24, 23, 23, 0.2); /* Sombra mais pronunciada */
         }
 
         .produto img {
@@ -231,7 +232,7 @@
 
         .produto button {
             background-color: #ffc107; /* Amarelo */
-            color: #343a40; /* Cinza escuro */
+            color: #3a3c3d; /* Cinza escuro */
             padding: 10px 20px;
             border-radius: 25px;
             text-align: center;
@@ -251,7 +252,7 @@
         }
 
         footer {
-            background-color: #343a40; /* Cinza escuro */
+            background-color: #0e1013; /* Cinza escuro */
             color: #fff;
             text-align: center;
             padding: 20px 0;
@@ -272,7 +273,7 @@
 <body>
 
     <header>
-        <img src="caminho_para_a_imagem.jpg" alt="Banner" style="width: 100%; max-width: 960px;">
+        <img src="imagem/welcome to our.png" height="200px" width="960px" alt="Banner">
     </header>
 
     <nav>
@@ -288,7 +289,7 @@
             Começa o <b>conteúdo...</b>
         </p>
         <button class="botao1">Menu</button>
-        <img class = "logo" src = "Caminho do Logo" alt = "Logo" style="width: 100%; max-width: 60px;"></img>
+        <img class = "logo" src = "jjjjjjjjjjjj" alt = "Logo" width: 980px; max-width: 60px;></img>
         <button class="botao2">Perfil</button>
 
 
@@ -299,7 +300,7 @@
                 <h2 class="titulo-secao">Guitarras</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_guitarra1.jpg" alt="Guitarra 1">
+                        <img src="caminho_para_guitarra1.jpg"  alt="Guitarra 1">
                         <h3>Guitarra 1</h3>
                         <p>R$ 500,00</p>
                         <button>Adicionar ao Carrinho</button>
