alteração de menu

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <a href="#">Item 1</a>
         <a href="#">Item 2</a>
         <a href="#">Item 3</a>
-        <a href="#">Item 4</a>
+        <a href="#">lixo</a>
         <a href="#">Item 5</a>
     </nav>
 
