coloquei as imagens

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 <body>
 
     <header>
-        <img src="imagem/welcome to our.png" height="200px" width="960px" alt="Banner">
+        <img src="Imagem/Banner.png" height="200px" width="960px" alt="Banner">
     </header>
 
     <nav>
@@ -300,13 +300,13 @@
                 <h2 class="titulo-secao">Guitarras</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_guitarra1.jpg"  alt="Guitarra 1">
+                        <img src="Imagem/Guitarra 1.jpg"  alt="Guitarra 1">
                         <h3>Guitarra 1</h3>
                         <p>R$ 500,00</p>
                         <button>Adicionar ao Carrinho</button>
                     </div>
                     <div class="produto">
-                        <img src="caminho_para_guitarra2.jpg" alt="Guitarra 2">
+                        <img src="Imagem/Guitarra 2.png" alt="Guitarra 2">
                         <h3>Guitarra 2</h3>
                         <p>R$ 600,00</p>
                         <button>Adicionar ao Carrinho</button>
@@ -319,13 +319,13 @@
                 <h2 class="titulo-secao">Teclados</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_teclado1.jpg" alt="Teclado 1">
+                        <img src="Imagem/Teclado 1.jpg" alt="Teclado 1">
                         <h3>Teclado 1</h3>
                         <p>R$ 800,00</p>
                         <button>Adicionar ao Carrinho</button>
                     </div>
                     <div class="produto">
-                        <img src="caminho_para_teclado2.jpg" alt="Teclado 2">
+                        <img src="Imagem/Teclado 2.webp" alt="Teclado 2">
                         <h3>Teclado 2</h3>
                         <p>R$ 900,00</p>
                         <button>Adicionar ao Carrinho</button>
@@ -338,13 +338,13 @@
                 <h2 class="titulo-secao">Baterias</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_bateria1.jpg" alt="Bateria 1">
+                        <img src="Imagem/Bateria 1.jpg" alt="Bateria 1">
                         <h3>Bateria 1</h3>
                         <p>R$ 1200,00</p>
                         <button>Adicionar ao Carrinho</button>
                     </div>
                     <div class="produto">
-                        <img src="caminho_para_bateria2.jpg" alt="Bateria 2">
+                        <img src="Imagem/Bateria 2.jpeg" alt="Bateria 2">
                         <h3>Bateria 2</h3>
                         <p>R$ 1300,00</p>
                         <button>Adicionar ao Carrinho</button>
@@ -357,13 +357,13 @@
                 <h2 class="titulo-secao">Microfones</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_microfone1.jpg" alt="Microfone 1">
+                        <img src="Imagem/Microfone 1.webp" alt="Microfone 1">
                         <h3>Microfone 1</h3>
                         <p>R$ 150,00</p>
                         <button>Adicionar ao Carrinho</button>
                     </div>
                     <div class="produto">
-                        <img src="caminho_para_microfone2.jpg" alt="Microfone 2">
+                        <img src="Imagem/Microfone 2.webp" alt="Microfone 2">
                         <h3>Microfone 2</h3>
                         <p>R$ 160,00</p>
                         <button>Adicionar ao Carrinho</button>
@@ -376,13 +376,13 @@
                 <h2 class="titulo-secao">Acessórios</h2>
                 <div class="produtos">
                     <div class="produto">
-                        <img src="caminho_para_acessorio1.jpg" alt="Acessório 1">
+                        <img src="Imagem/Acessorio 1.webp" alt="Acessório 1">
                         <h3>Acessório 1</h3>
                         <p>R$ 20,00</p>
                         <button>Adicionar ao Carrinho</button>
                     </div>
                     <div class="produto">
-                        <img src="caminho_para_acessorio2.jpg" alt="Acessório 2">
+                        <img src="Imagem/Acessorio 2.webp" alt="Acessório 2">
                         <h3>Acessório 2</h3>
                         <p>R$ 30,00</p>
                         <button>Adicionar ao Carrinho</button>
