Atualização Dos Produtos

--- a/Código Principal (Dividido).html
+++ b/Código Principal (Dividido).html
@@ -295,7 +295,7 @@
        
         <div class="conteudo">
             <div class="secao" id="guitarras">
-                <h2 class="titulo-secao">Guitarras</h2>
+                <h2 class="titulo-secao">Guitarras E Violão</h2>
                 <div class="produtos">
                     <div class="produto">
                         <img src="https://static.vecteezy.com/system/resources/previews/030/467/169/large_2x/a-serene-composition-acoustic-guitar-and-musical-keys-rest-on-a-blank-canvas-vertical-mobile-wallpaper-ai-generated-free-photo.jpg"  alt="Guitarra 1">
