arrumei umas coisas

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
             text-align: center;
         }
 
+        .banner {
+            height:auto;
+            width:100%;
+            
+        }
+
         nav {
             background-color: black;
             height: 30px;
@@ -77,16 +83,11 @@
             border: none;
             outline: none;
         }
-
         .logo {
-            float: center;
-            margin: 10px;
-        }
-
-        .logo {
-            margin: 10px;
-            max-width: 60px;
-
+            margin-left: 112px;
+            width: auto;
+            height: auto;
+            border-radius: 10px;
         }
 
         .produtos {
@@ -273,23 +274,20 @@
 <body>
 
     <header>
-        <img src="Imagem/Banner.png" height="200px" width="960px" alt="Banner">
+        <img src="Imagem/Banner.png" class="banner" alt="Banner";>
     </header>
 
     <nav>
-        <a href="#">Item 1</a>
-        <a href="#">Item 2</a>
-        <a href="#">Item 3</a>
-        <a href="#">Item 4</a>
-        <a href="#">Item 5</a>
+        <a href="NAV/leilão.html">Leilão</a>
+        <a href="NAV/contatos.html">Contatos</a>
+        <a href="NAV/carrinho.html">Carrinho</a>
+        <a href="NAV/cadastro.html">Cadastre-se</a>
+        <a href="NAV/sobrenos.html">Sobre nós</a>
     </nav>
 
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
-        <p>
-            Começa o <b>conteúdo...</b>
-        </p>
-        <button class="botao1">Menu</button>
-        <img class = "logo" src = "jjjjjjjjjjjj" alt = "Logo" width: 980px; max-width: 60px;></img>
+        <button class="botao1">Opções</button>
+        <img class = "logo" src = "Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
         <button class="botao2">Perfil</button>
 
 
