--- a/NAV/contatos.html
+++ b/NAV/contatos.html
@@ -66,11 +66,10 @@
     <div class="banner"></div>
 
     <nav class="nav-menu">
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
         <a href="eventos.html">Eventos</a>
-        <a href="sobre.html">Sobre Nós</a>
-        <a href="contato.html">Contato</a>
-        <a href="cadastrar.html">Cadastrar-se</a>
+        <a href="NAV/sobrenos.html">Sobre Nós</a>
+        <a href="NAV/cadastro.html">Cadastrar-se</a>
     </nav>
     <div class="content">
         <div class="content-inner">
