--- a/NAV/leilão.html
+++ b/NAV/leilão.html
@@ -97,13 +97,13 @@
         <h1>Leilão de Instrumentos Musicais</h1>
     </header>
     <nav>
-        <a href="#">Home</a>
+        <a href="index.html">Home</a>
         <a href="#">Guitarras e Violões</a>
         <a href="#">Teclados</a>
         <a href="#">Baterias</a>
         <a href="#">Microfones</a>
         <a href="#">Acessórios</a>
-        <a href="#">Contato</a>
+        <a href="NAV/contatos.html">Contato</a>
     </nav>
     <div class="container">
         <div class="leilao-info">
