--- a/NAV/contatos.html
+++ b/NAV/contatos.html
@@ -22,12 +22,14 @@
             z-index: 1;
         }
         .nav-menu {
-            width: 100%;
-            background-color: #333;
+            width: 50%;
+            background: linear-gradient(to right, rgb(0, 0, 180), #4b014b);
             overflow: hidden;
             position: fixed;
             top: 80px; /* Logo abaixo do banner */
             justify-content: center;
+            margin-left: 460px;
+            border-radius: 10px;
         }
         .nav-menu a {
             float: left;
@@ -39,8 +41,8 @@
             font-size: 17px;
         }
         .nav-menu a:hover {
-            background-color: #ddd;
-            color: black;
+            background: linear-gradient(to right, rgba(1, 1, 116, 0.514), #25002588);
+            color: white;
         }
         .nav-menu a:active, .nav-menu a:focus {
             background-color: black;
@@ -59,6 +61,14 @@
             padding: 20px;
         }
 
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Centraliza os itens do menu */
+        }
+
     </style>
 </head>
 <body>
@@ -66,10 +76,12 @@
     <div class="banner"></div>
 
     <nav class="nav-menu">
-        <a href="index.html">Início</a>
-        <a href="eventos.html">Eventos</a>
-        <a href="NAV/sobrenos.html">Sobre Nós</a>
-        <a href="NAV/cadastro.html">Cadastrar-se</a>
+        <ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="eventos.html">Eventos</a></li>
+            <li><a href="sobrenos.html">Sobre Nós</a></li>
+            <li><a href="cadastro.html">Cadastrar-se</a></li>
+        </ul>
     </nav>
     <div class="content">
         <div class="content-inner">
