--- a/NAV/sobrenos.html
+++ b/NAV/sobrenos.html
@@ -9,26 +9,30 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background: linear-gradient(to right, #00f, #800080);
         }
         header {
-            background-color: #333;
+            background: linear-gradient(to right, rgb(0, 0, 180), #4b014b);
             color: #fff;
             padding: 10px 0;
             text-align: center;
+            font-size: xx-large;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
         }
         .container {
             width: 80%;
-            margin: auto;
+            margin: 50px auto;
             overflow: hidden;
             padding: 20px;
             background: #fff;
+            border-radius: 10px;
         }
-        h1, h2, h3 {
+        h2, h3 {
             color: #333;
         }
+
         footer {
-            background-color: #333;
+            background: linear-gradient(to right, rgb(0, 0, 180), #4b014b);
             color: #fff;
             text-align: center;
             padding: 10px 0;
@@ -41,7 +45,7 @@
 <body>
 
 <header>
-    <h1>Empresa Exemplo</h1>
+    <h1>Musical Technologies</h1>
 </header>
 
 <div class="container">
