Arrumei as duplicancias

--- a/NAV/leilão.html
+++ b/NAV/leilão.html
@@ -32,6 +32,15 @@
             padding: 14px 20px;
             text-decoration: none;
         }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center; /* Centraliza os itens do menu */
+        }
+
         nav a:hover {
             background-color: #ddd;
             color: black;
@@ -59,7 +68,7 @@
             box-sizing: border-box;
         }
         .produto img {
-            max-width: 100%;
+            max-width: 30%;
             height: auto;
         }
         .produto h3 {
@@ -77,6 +86,7 @@
             color: white;
             border: none;
             cursor: pointer;
+            border-radius: 10px;
         }
         .produto button:hover {
             background-color: #3498db;
@@ -97,13 +107,15 @@
         <h1>Leilão de Instrumentos Musicais</h1>
     </header>
     <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Guitarras e Violões</a>
-        <a href="#">Teclados</a>
-        <a href="#">Baterias</a>
-        <a href="#">Microfones</a>
-        <a href="#">Acessórios</a>
-        <a href="NAV/contatos.html">Contato</a>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Guitarras e Violões</a></li>
+            <li><a href="#">Teclados</a></li>
+            <li><a href="#">Baterias</a></li>
+            <li><a href="#">Microfones</a></li>
+            <li><a href="#">Acessórios</a></li>
+            <li><a href="NAV/contatos.html">Contato</a></li>
+        </ul>
     </nav>
     <div class="container">
         <div class="leilao-info">
