Coloquei o CSS externo para o index.html

--- a/index.html
+++ b/index.html
@@ -4,175 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f3f3; /* Fundo cinza-claro */
-        }
+    <link rel="stylesheet" type="text/css" href="CSS/indexstyle-wide.css"
 
-        header {
-            background-color: #343a40;
-            color: #fff;
-            text-align: center;
-        }
-
-        .banner {
-            height:auto;
-            width:100%;
-        }
-
-        nav {
-            background-color: #3f4750;
-            height: 30px;
-            color: rgb(100, 91, 91);
-            text-align: center;
-            padding: 10px;
-            border-bottom-left-radius: 5px;
-            border-bottom-right-radius: 5px;
-        }
-
-        nav a {
-            color: rgb(253, 253, 253);
-            text-decoration: none;
-            padding: 10px 20px;
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-        }
-
-        .conteudo {
-            background-color:#e9ecef; /* Fundo branco */
-            border-radius: 10px; /* Cantos arredondados */
-            padding: 20px;
-            margin: 10px auto; /* Centraliza e dá um espaçamento */
-            width: 90%; /* Largura do conteúdo */
-            max-width: 900px; /* Largura máxima da janela */
-        }
-
-        .botao1 {
-            float: left;
-            background-color: rgb(8, 8, 8);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            border: none;
-            outline: none;
-        }
-
-        .botao2 {
-            float: right;
-            background-color: rgb(8, 8, 8);
-            color: white;
-            padding: 10px 20px;
-            border-radius: 25px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-            border: none;
-            outline: none;
-        }
-        .logo {
-            margin-left: 112px;
-            width: auto;
-            height: auto;
-            border-radius: 10px;
-        }
-
-        .produtos {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-            margin-top: 20px;
-        }
-
-        footer {
-            background-color: #282c33; /* Cinza escuro */
-            color: #fff;
-            text-align: center;
-            padding: 20px 0;
-            border-radius: 7px;
-        }
-
-            
-        .secao {
-            margin-top: 40px; /* Maior espaçamento entre seções */
-        }
-
-        .titulo-secao {
-            font-size: 36px; /* Título maior */
-            margin-bottom: 20px; /* Maior espaçamento abaixo do título */
-            color: #2a2e31; /* Texto escuro */
-            text-align: center; /* Centraliza o título */
-        }
-
-        .produto {
-            width: 30%;
-            padding: 20px;
-            margin: 20px 0; /* Maior espaçamento entre produtos */
-            background-color: #f1f1f1; /* Fundo cinza-claro */
-            border-radius: 10px;
-            transition: all 0.3s ease; /* Transição suave */
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
-        }
-
-        .produto:hover {
-            transform: translateY(-5px); /* Efeito de elevação ao passar o mouse */
-            box-shadow: 0 0 20px rgba(24, 23, 23, 0.2); /* Sombra mais pronunciada */
-        }
-
-        .produto img {
-            width: 100%;
-            border-radius: 10px;
-            transition: transform 0.3s ease; /* Transição suave */
-        }
-
-        .produto:hover img {
-            transform: scale(1.1); /* Efeito de zoom ao passar o mouse */
-        }
-
-        .produto h3 {
-            margin-top: 20px; /* Maior espaçamento acima do título */
-            font-size: 24px; /* Tamanho maior */
-        }
-
-        .produto p {
-            font-weight: bold;
-            margin-bottom: 20px; /* Maior espaçamento abaixo do preço */
-        }
-
-        .produto button {
-            background-color: #ffc107; /* Amarelo */
-            color: #3a3c3d; /* Cinza escuro */
-            padding: 10px 20px;
-            border-radius: 25px;
-            text-align: center;
-            text-decoration: none;
-            cursor: pointer;
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            border: none;
-            outline: none;
-            display: block;
-            margin: 10px auto;
-            transition: background-color 0.3s ease; /* Transição suave */
-        }
-
-        .produto button:hover {
-            background-color: #ffcf3f;
-            box-shadow: 0 0 10px rgba(24, 23, 23, 0.2); /* Sombra */
-        }
-
-    </style>
 </head>
 <body>
 
