--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
-    <link rel="stylesheet" type="text/css" href="CSS/indexstyle-wide.css"
-
+    <link rel="stylesheet" type="text/css" href="CSS/index.css">
+    
 </head>
 <body>
 
     <header>
-        <img src="Imagem/Banner.png" class="banner" alt="Banner";>
+        <img src="Imagem/Banner.png" class="banner" alt="Banner">
     </header>
 
     <nav>
@@ -24,7 +24,7 @@
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
         <button class="botao1">Opções</button>
         <img class = "logo" src = "Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
-        <button class="botao2">Perfil</button>
+        <button class="botao2" href="Perfil.html">Perfil</button>
 
 
     
