--- a/Paginas/Perfil.html
+++ b/Paginas/Perfil.html
@@ -25,7 +25,7 @@
 
         .profile-header {
             text-align: center;
-            background-color: #4CAF50;
+            background-color: #16094e;
             color: #FFFFFF;
             padding: 30px 20px;
         }
@@ -63,14 +63,14 @@
 
         .post h3 {
             margin: 0 0 10px;
-            color: #4CAF50;
+            color: #000000;
         }
 
         .load-more-button {
             display: block;
             margin: 20px auto;
             padding: 10px 20px;
-            background-color: #4CAF50;
+            background-color: #16094e;
             color: white;
             border: none;
             border-radius: 5px;
@@ -81,7 +81,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="profile-picture.jpg" alt="Foto do Perfil" class="profile-picture">
+            <img src="Imagem/FotoPerfil.jpg" alt="Foto do Perfil" class="profile-picture">
             <h1 class="profile-name">Nome do Usuário</h1>
         </div>
         <div class="profile-details">
