--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     </nav>
 
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
-        <button class="botao1">Opções</button>
+        <button class="botao1" onclick="alert('Não foi especificado, fazer depois')">Opções</button>
         <img class = "logo" src = "Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
-        <button class="botao2" href="Perfil.html">Perfil</button>
+        <button class="botao2" onclick="location.href='Paginas/Perfil.html'">Perfil</button>
 
 
     
