--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </header>
 
     <nav>
-        <a href="NAV/leilão.html">Leilão</a>
-        <a href="NAV/contatos.html">Contatos</a>
-        <a href="NAV/carrinho.html">Carrinho</a>
-        <a href="NAV/cadastro.html">Cadastre-se</a>
-        <a href="NAV/sobrenos.html">Sobre nós</a>
+        <a href="leilão.html">Leilão</a>
+        <a href="contatos.html">Contatos</a>
+        <a href="carrinho.html">Carrinho</a>
+        <a href="cadastro.html">Cadastre-se</a>
+        <a href="sobrenos.html">Sobre nós</a>
     </nav>
 
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
