--- a/Paginas/leilão.html
+++ b/Paginas/leilão.html
@@ -12,16 +12,22 @@
             background-color: #f4f4f4;
         }
         header {
-            background-color: #2c3e50;
+            background-color: #30373f;
             color: white;
             padding: 15px 0;
             text-align: center;
         }
+
+        .banner {
+            height: auto;
+            width: 100%;
+        }
+
         header h1 {
             margin: 0;
         }
         nav {
-            background-color: #34495e;
+            background-color: #3f4750;
             overflow: hidden;
         }
         nav a {
@@ -38,7 +44,8 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center; /* Centraliza os itens do menu */
+            justify-content: center;
+            flex-wrap: wrap;
         }
 
         nav a:hover {
@@ -66,15 +73,23 @@
             padding: 15px;
             margin-bottom: 20px;
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         .produto img {
-            max-width: 30%;
+            max-width: 100%;
             height: auto;
         }
         .produto h3 {
             font-size: 1.2em;
             margin: 10px 0;
         }
+
+        .produto h3:hover, p:hover {
+            transform: scale(1.1);
+        }
+
         .produto p {
             font-size: 1.1em;
             color: #2980b9;
@@ -87,23 +102,56 @@
             border: none;
             cursor: pointer;
             border-radius: 10px;
+            transition: 0.3s ease;
         }
         .produto button:hover {
             background-color: #3498db;
+            box-shadow: 0 0 10px #2c3e50;
         }
         footer {
             background-color: #2c3e50;
             color: white;
             text-align: center;
             padding: 10px 0;
-            position: fixed;
             bottom: 0;
             width: 100%;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                width: 90%;
+            }
+            nav a {
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            header h1 {
+                font-size: 1.5em;
+            }
+            nav a {
+                padding: 8px;
+                font-size: 0.9em;
+            }
+            .produto div {
+                padding: 5px;
+            }
+            .produto h3 {
+                font-size: 1em;
+            }
+            .produto p {
+                font-size: 0.9em;
+            }
+            .produto button {
+                padding: 8px 10px;
+            }
         }
     </style>
 </head>
 <body>
     <header>
+        <img src="Imagem/Banner.png" class="banner" alt="Banner">
         <h1>Leilão de Instrumentos Musicais</h1>
     </header>
     <nav>
@@ -114,7 +162,7 @@
             <li><a href="#">Baterias</a></li>
             <li><a href="#">Microfones</a></li>
             <li><a href="#">Acessórios</a></li>
-            <li><a href="NAV/contatos.html">Contato</a></li>
+            <li><a href="contatos.html">Contato</a></li>
         </ul>
     </nav>
     <div class="container">
@@ -173,3 +221,9 @@
             <p>R$ 300,00</p>
             <button>Fazer Lance</button>
         </div>
+    </div>
+    <footer>
+        <p>&copy; 2024 Leilão de Instrumentos Musicais. Todos os direitos reservados.</p>
+    </footer>
+</body>
+</html>
