--- a/Paginas/index.html
+++ b/Paginas/index.html
@@ -24,7 +24,7 @@
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
         <button class="botao1" onclick="alert('Não foi especificado, fazer depois')">Opções</button>
         <img class = "logo" src = "Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
-        <button class="botao2" onclick="location.href='Paginas/Perfil.html'">Perfil</button>
+        <button class="botao2" onclick="location.href='Perfil.html'">Perfil</button>
 
 
     
