--- a/index.html
+++ b/index.html
@@ -4,26 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
-    <link rel="stylesheet" type="text/css" href="CSS/index.css">
+    <link rel="stylesheet" type="text/css" href="Paginas/CSS/index.css">
     
 </head>
 <body>
 
     <header>
-        <img src="Imagem/Banner.png" class="banner" alt="Banner">
+        <img src="Paginas/Imagem/Banner.png" class="banner" alt="Banner">
     </header>
 
     <nav>
-        <a href="leilão.html">Leilão</a>
-        <a href="contatos.html">Contatos</a>
-        <a href="carrinho.html">Carrinho</a>
-        <a href="cadastro.html">Cadastre-se</a>
-        <a href="sobrenos.html">Sobre nós</a>
+        <a href="Paginas/leilão.html">Leilão</a>
+        <a href="Paginas/contatos.html">Contatos</a>
+        <a href="Paginas/carrinho.html">Carrinho</a>
+        <a href="Paginas/cadastro.html">Cadastre-se</a>
+        <a href="Paginas/sobrenos.html">Sobre nós</a>
     </nav>
 
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
         <button class="botao1" onclick="alert('Não foi especificado, fazer depois')">Opções</button>
-        <img class = "logo" src = "Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
+        <img class = "logo" src = "Paginas/Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
         <button class="botao2" onclick="location.href='Perfil.html'">Perfil</button>
 
 
