Agr sim, tudo certinho

--- a/Paginas/contatos.html
+++ b/Paginas/contatos.html
@@ -6,68 +6,95 @@
     <title>Página Exemplo</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: linear-gradient(to right, #00f, #800080); /* Degradê de azul para roxo */
-            margin: 0;
-            padding: 20px;
-        }
-        .banner {
-            width: 100%;
-            height: 80px; /* Altura do banner */
-            background: url('banner.jpg') no-repeat center center;
-            background-size: cover;
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: 1;
-        }
-        .nav-menu {
-            width: 50%;
-            background: linear-gradient(to right, rgb(0, 0, 180), #4b014b);
-            overflow: hidden;
-            position: fixed;
-            top: 80px; /* Logo abaixo do banner */
-            justify-content: center;
-            margin-left: 460px;
-            border-radius: 10px;
-        }
-        .nav-menu a {
-            float: left;
-            display: block;
-            color: #f2f2f2;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-            font-size: 17px;
-        }
-        .nav-menu a:hover {
-            background: linear-gradient(to right, rgba(1, 1, 116, 0.514), #25002588);
-            color: white;
-        }
-        .nav-menu a:active, .nav-menu a:focus {
-            background-color: black;
-            color: white;
-        }
-        .content {
-            background-color: #ffffff;
-            margin: 140px auto 20px auto; /* Espaçamento do topo do banner e menu */
-            padding: 20px;
-            width: calc(100% - 60px);
-            max-width: 900px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        .content-inner {
-            padding: 20px;
-        }
+    font-family: Arial, sans-serif;
+    background: linear-gradient(to right, #00f, #800080);
+    margin: 0;
+    padding: 20px;
+}
+.banner {
+    width: 100%;
+    height: 80px;
+    background: url('banner.jpg') no-repeat center center;
+    background-size: cover;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+.nav-menu {
+    width: 100%;
+    background: linear-gradient(to right, rgb(0, 0, 180), #4b014b);
+    overflow: hidden;
+    position: fixed;
+    top: 80px;
+    display: flex;
+    justify-content: center;
+    border-radius: 0 0 10px 10px;
+    z-index: 2;
+}
+.nav-menu ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+.nav-menu li {
+    margin: 0;
+}
+.nav-menu a {
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+.nav-menu a:hover {
+    background: linear-gradient(to right, rgba(1, 1, 116, 0.514), #25002588);
+    color: white;
+}
+.nav-menu a:active, .nav-menu a:focus {
+    background-color: black;
+    color: white;
+}
+.content {
+    background-color: #ffffff;
+    margin: 140px auto 20px auto;
+    padding: 20px;
+    width: calc(100% - 60px);
+    max-width: 900px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.content-inner {
+    padding: 20px;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+li {
+    margin-bottom: 10px;
+}
 
-        nav ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center; /* Centraliza os itens do menu */
-        }
+/* Media Queries para responsividade */
+@media (max-width: 768px) {
+    .nav-menu {
+        flex-direction: column;
+        top: 80px;
+    }
+    .nav-menu ul {
+        flex-direction: column;
+    }
+    .nav-menu a {
+        padding: 10px;
+    }
+    .content {
+        margin: 160px 10px 20px 10px;
+        width: calc(100% - 20px);
+    }
+}
+
 
     </style>
 </head>
