--- a/Perfil/Perfil.html
+++ b/Perfil/Perfil.html
@@ -81,7 +81,7 @@
 <body>
     <div class="profile-container">
         <div class="profile-header">
-            <img src="Imagem/FotoPerfil.jpg" alt="Foto do Perfil" class="profile-picture">
+            <img src="FotoPerfil.jpg" alt="Foto do Perfil" class="profile-picture">
             <h1 class="profile-name">Nome do Usuário</h1>
         </div>
         <div class="profile-details">
