--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página</title>
-    <link rel="stylesheet" type="text/css" href="Paginas/CSS/index.css">
+    <link rel="stylesheet" type="text/css" href="CSS/index.css">
     
 </head>
 <body>
@@ -24,7 +24,7 @@
     <div class="conteudo">  <!-- Aqui vai o conteúdo da página -->
         <button class="botao1" onclick="alert('Não foi especificado, fazer depois')">Opções</button>
         <img class = "logo" src = "Paginas/Imagem/logo.png" alt = "Logo" width: 980px; max-width: 60px;></img>
-        <button class="botao2" onclick="location.href='Perfil.html'">Perfil</button>
+        <button class="botao2" onclick="location.href='Perfil/Perfil.html'">Perfil</button>
 
 
     
